--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,138 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-size: 16px;
+  font-family: "Roboto Slab", serif;
+  background-color: rgb(227, 227, 235);
+}
+
+form {
+  margin-top: 2em;
+  margin-bottom: 2em;
+  text-align: center;
+}
+
+form input {
+  line-height: 2.3em;
+  padding-left: 1em;
+  background-color: white;
+  border: none;
+  color: gray;
+}
+
+form button {
+  margin-left: 10px;
+  padding: 8px 25px;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  background-color: rgb(82, 4, 82);
+  transition: all 250ms ease-in-out;
+}
+
+form button:hover {
+  cursor: pointer;
+  transform: scale(0.95);
+  background-color: #fff;
+  color: rgb(82, 4, 82);
+}
+
+em {
+  font-weight: bolder;
+}
+
+.App {
+  padding: 50px 50px;
+  height: 100%;
+  background-color: rgb(227, 227, 235);
+}
+
+.App .navbar {
+  text-align: center;
+}
+
+.App .navbar h1 {
+  font-family: "Lobster", cursive;
+  font-size: 2.5rem;
+  padding-bottom: 0.5em;
+}
+
+.App .navbar .navbar-links {
+  max-width: 200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.Home h1 {
+  color: rgb(82, 4, 82);
+}
+
+.Home .example,
+.Home .list,
+.my-list {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.my-list {
+  margin-top: 4em;
 }
 
 .box {
-  border: 1px solid rgb(118, 118, 226);
+  border: 1.5px solid rgb(38, 38, 88);
+  border-radius: 4px;
+  max-width: 700px;
+  height: 150px;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  padding: 8px;
+  overflow: scroll;
+  line-height: 1.5em;
+}
+
+.box h1 {
+  font-size: 1.8rem;
+  margin-top: 0.3em;
+  margin-bottom: 0.3em;
+}
+
+.purple-text {
+  color: rgb(146, 37, 146);
+}
+
+.box p {
+  color: rgb(38, 38, 88);
+}
+
+.box .parts {
+  color: rgb(108, 108, 131);
+}
+
+.buttons button {
+  margin-right: 10px;
+  font-size: 0.8rem;
+  padding: 8px 23px;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  background-color: rgb(158, 52, 158);
+  margin-bottom: 1.3em;
+  transition: all 250ms ease-in-out;
+}
+
+.buttons button:hover {
+  cursor: pointer;
+  background-color: rgb(82, 4, 82);
+  color: #fff;
+  transform: scale(0.95);
+}
+
+@media (max-width: 600px) {
+  .App .navbar .navbar-links {
+    display: flex;
+    flex-direction: column;
+    height: 4em;
+    justify-content: space-between;
+  }
 }
